# FlyElephantTask

./: .gitignore  CMakeLists.txt  LICENSE  README.txt  argparser.cpp  flytoelephantalgorythm.cpp  flytoelephantalgorythm.h  resource.h  test.cpp  testargparser.cpp  testargparser.h  testflytoelephantalgorithm.cpp  testresource.cpp
GradeValidation/: CMakeCache.txt  argparser.h  main.cpp  resource.cpp
